test/types/errors/assignTypes.good
assignTypes.chpl:17: In function '=':
assignTypes.chpl:18: error: illegal assignment to type
